# py-udal-fe-impl

./: README.md  pyproject.toml  requirements.txt
examples/: argo_data.ipynb
fairease/udal/: broker.py  config.py  example.py  namedqueries.py  result.py  udal.py
fairease/udal/brokers/: beacon.py  iddas.py  local.py  wikidata.py
test/datasets/: months.csv  weekdays.csv
